Bug 132491 - FILEOPEN DOCX Underline color direct character formatting not applied on grouped shapes text
Summary: FILEOPEN DOCX Underline color direct character formatting not applied on grou...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Regényi
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2020-04-28 14:36 UTC by NISZ LibreOffice Team
Modified: 2020-04-30 10:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (17.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-04-28 14:36 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (92.24 KB, image/png)
2020-04-28 14:36 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-04-28 14:36:08 UTC
Created attachment 160028 [details]
Example file from Word

Attached document contains a standalone shape and some grouped ones with orange underline color directly applied on their underlined text.
In case the grouped shapes this is not applied when the document is opened in Writer.


Steps to reproduce:
    1. Create some shapes in Word, add text to them
    2. Apply underline and underline color setting (orange in this case) directly on the text
    3. Save as docx, open in Writer

Actual results:
Underline color of the text in the grouped shapes is not orange, but black.

Expected results:
Direct character formatting is applied on the grouped shapes text.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: a40455528c4ec2c079444f320a02d1946e1d8ac9
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-04-28 14:36:39 UTC
Created attachment 160029 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Xisco Faulí 2020-04-28 14:50:13 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 4ba1909f12b49f020195b5e767045340717ce6df
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

in previous versions the underline is no even there
Comment 3 Commit Notification 2020-04-29 14:21:44 UTC
Regényi Balázs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d0124728059088cd72cb173e33df89d785ae2ab5

tdf#132491 DOCX DrawingML shape import: fix missing underline color

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Attila Baraksó (NISZ) 2020-04-30 10:38:55 UTC
Verified in:

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 861b556bb3779242951c03b3f68a32eb8c15db02
CPU szálak: 4; OS: Windows 10.0 Build 17134; Felületmegjelenítés: Skia/Raster; VCL: win; 
Locale: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL