tdf#132491 DOCX DrawingML shape import: fix missing underline color

The import of underline color was unhandled.
Co-Author: Szabolcs Toth

Change-Id: I47dce90966c7130ca67941ee47b0e4b2ba7eb972